--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha server/**/*.test.js",
+    "test-watch": "nodemon --exec 'npm test'",
     "start": "node server/server.js",
     "dev": "nodemon server/server.js -e js,html"
   },
@@ -14,7 +15,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "chai": "^4.1.2",
     "express": "^4.16.2",
+    "mocha": "^5.0.5",
+    "moment": "^2.22.0",
     "socket.io": "^2.0.4"
   }
 }
