--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "mocha server/**/*.test.js",
-    "test-watch": "nodemon --exec 'npm test'",
+    "test-watch": "nodemon --exec npm test",
     "start": "node server/server.js",
     "dev": "nodemon server/server.js -e js,html"
   },
